--- a/src/mpimod/CMakeLists.txt
+++ b/src/mpimod/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(autogrid autogrid.f90)
+add_library(autogrid OBJECT autogrid.f90)
 
 if(realbits EQUAL 32)
   set(mpi_realprec mpi_real)
@@ -8,16 +8,19 @@ endif()
 
 configure_file(mpimod.in.f90 mpimod.f90 @ONLY)
 
-add_library(mpimod
+add_library(mpimod OBJECT
   ${CMAKE_CURRENT_BINARY_DIR}/mpimod.f90
+  $<TARGET_OBJECTS:autogrid>
   mpisend.f90 mpirecv.f90 mpihalo.f90)
 # not OBJECT to avoid CMake 3.13 trouble
-target_link_libraries(mpimod PRIVATE autogrid const MPI::MPI_Fortran)
+target_link_libraries(mpimod PRIVATE const MPI::MPI_Fortran)
 if(NOT mpi)
   # the reason for this is the MPI-1 Fortran 77 linking in MUMPS
   # this seemed to be an easy way to avoid symbol clashes
   target_link_libraries(mpimod PRIVATE MUMPS::mpiseq)
 endif()
+
+set_targ_props(autogrid mpimod)
 
 #-----
 
@@ -25,6 +28,7 @@ if(${PROJECT_NAME}_BUILD_TESTING)
 
 add_executable(test_excess_mpi test_excess_mpi.f90)
 target_link_libraries(test_excess_mpi PRIVATE autogrid)
+
 add_test(NAME unit:mpi:excessCPU COMMAND $<TARGET_FILE:test_excess_mpi>)
 set_tests_properties(unit:mpi:excessCPU PROPERTIES TIMEOUT 10)
 
