--- a/.github/workflows/ci_macos.yml
+++ b/.github/workflows/ci_macos.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - run: cmake -P cmake/gemini_prereq.cmake
+    - run: cmake -P scripts/gemini_prereq.cmake
       timeout-minutes: 5
       # transient CI download speed
 
