add environment print test
this can be useful when diagnosing seemingly bizarre problems
when you're not sure if the shell / frontend is passing needed
environment variables to the final executable.

For example, perhaps a Matlab/Python script calls the gemini3d.run
front-end that invokes gemini.bin. We want to be sure the final
Fortran executable has the several environment variables it needs,
particularly for MPI etc.

--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -1,6 +1,11 @@
 include(CheckSymbolExists)
 include(CheckIncludeFile)
 
+if(${PROJECT_NAME}_BUILD_TESTING)
+  add_executable(echo_path echo_path.f90)
+  add_test(NAME debug:EchoEnvVar COMMAND $<TARGET_FILE:echo_path>)
+endif()
+
 add_library(helpmod OBJECT help.f90)
 target_link_libraries(helpmod PRIVATE config)
 set_target_properties(helpmod PROPERTIES Fortran_MODULE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/include)
