--- a/.github/workflows/ci_linux.yml
+++ b/.github/workflows/ci_linux.yml
@@ -54,7 +54,7 @@ jobs:
         sudo apt update -yq
         sudo cmake -P scripts/gemini_prereq.cmake
 
-    - run: cmake -B build -DCMAKE_BUILD_TYPE=Debug
+    - run: cmake --preset=make -DCMAKE_BUILD_TYPE=Debug
     - run: cmake --build build --parallel
 
     - run: ctest -R unit --parallel 4 --output-on-failure
