--- a/.github/workflows/ci_windows.yml
+++ b/.github/workflows/ci_windows.yml
@@ -31,7 +31,7 @@ jobs:
 
     - uses: actions/checkout@v2
 
-    - run: cmake -B build
+    - run: cmake --preset=ninja
       timeout-minutes: 2
 
     - run: cmake --build build --parallel
