more robusly exclude shaky test default

--- a/src/io/CMakeLists.txt
+++ b/src/io/CMakeLists.txt
@@ -12,19 +12,18 @@ if(${PROJECT_NAME}_BUILD_TESTING)
     set_target_properties(debug_dump PROPERTIES EXCLUDE_FROM_ALL true)
   endif(f2018assumed_rank)
 
-  add_executable(test_errors test_errors.f90)
-  target_link_libraries(test_errors PRIVATE errors const h5fortran::h5fortran)
-  set_target_properties(test_errors PROPERTIES EXCLUDE_FROM_ALL true)
+  if(test_shaky)
+    # this test sometimes causes a segfault on exit, which breaks CTest WILL_FAIL
+    # this is a long-standing open issue with CMake et al,
+    # so we by default omit this test.
+    add_executable(test_errors test_errors.f90)
+    target_link_libraries(test_errors PRIVATE errors const h5fortran::h5fortran)
 
-  if(TARGET test_errors)
     add_test(NAME gemini:stop:zero COMMAND $<TARGET_FILE:test_errors> root)
     set_tests_properties(gemini:stop:zero PROPERTIES WILL_FAIL true)
+    # FIXME: add a follow-on test using Fixtures that read and verify expected file dump
   endif()
-  # this test sometimes causes a segfault on exit, which breaks CTest WILL_FAIL
-  # this is a long-standing open issue with CMake et al,
-  # so we by default omit this test.
 
-  # FIXME: add a follow-on test using Fixtures that read and verify expected file dump
 endif(${PROJECT_NAME}_BUILD_TESTING)
 
 add_library(sanity_check OBJECT sanity_check.f90 $<TARGET_OBJECTS:errors>)
