update package versions

--- a/scripts/CMakeLists.txt
+++ b/scripts/CMakeLists.txt
@@ -1,9 +1,15 @@
 # for systems where you can't use "cmake -P scripts/install_prereq.cmake"
 # this project builds the prereqs
 
-cmake_minimum_required(VERSION 3.13...3.20)
+cmake_minimum_required(VERSION 3.19...3.20)
 
 project(BuildGeminiPrereq LANGUAGES C Fortran)
+
+set(arith "s;d")
+# NOTE: lists must be passed via CMAKE_CACHE_ARGS using -Dvar:STRING=${var}
+# the variable type must be included e.g. STRING
+
+set(EP_UPDATE_DISCONNECTED true)
 
 include(ExternalProject)
 
@@ -40,39 +46,42 @@ endforeach()
 ExternalProject_Add(LAPACK
 GIT_REPOSITORY ${lapack_git}
 GIT_TAG ${lapack_tag}
-CONFIGURE_HANDLED_BY_BUILD ON
 INACTIVITY_TIMEOUT 30
+CONFIGURE_HANDLED_BY_BUILD ON
 CMAKE_ARGS -DCMAKE_INSTALL_PREFIX:PATH=${LAPACK_ROOT} -DBUILD_SHARED_LIBS:BOOL=false -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTING:BOOL=false
+CMAKE_CACHE_ARGS -Darith:STRING=${arith}
 )
 
 ExternalProject_Add(SCALAPACK
 GIT_REPOSITORY ${scalapack_git}
 GIT_TAG ${scalapack_tag}
-CONFIGURE_HANDLED_BY_BUILD ON
 INACTIVITY_TIMEOUT 30
-CMAKE_ARGS -DCMAKE_INSTALL_PREFIX:PATH=${SCALAPACK_ROOT} -DBUILD_SHARED_LIBS:BOOL=false -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTING:BOOL=false
+CONFIGURE_HANDLED_BY_BUILD ON
+CMAKE_ARGS -DCMAKE_INSTALL_PREFIX:PATH=${SCALAPACK_ROOT} -DLAPACK_ROOT:PATH=${LAPACK_ROOT} -DBUILD_SHARED_LIBS:BOOL=false -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTING:BOOL=false
+CMAKE_CACHE_ARGS -Darith:STRING=${arith}
 DEPENDS LAPACK)
 
 ExternalProject_Add(MUMPS
 GIT_REPOSITORY ${mumps_git}
 GIT_TAG ${mumps_tag}
-CONFIGURE_HANDLED_BY_BUILD ON
 INACTIVITY_TIMEOUT 30
-CMAKE_ARGS -DCMAKE_INSTALL_PREFIX:PATH=${MUMPS_ROOT} -DBUILD_SHARED_LIBS:BOOL=false -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTING:BOOL=false
+CONFIGURE_HANDLED_BY_BUILD ON
+CMAKE_ARGS -DCMAKE_INSTALL_PREFIX:PATH=${MUMPS_ROOT} -DLAPACK_ROOT:PATH=${LAPACK_ROOT} -DSCALAPACK_ROOT:PATH=${SCALAPACK_ROOT} -DBUILD_SHARED_LIBS:BOOL=false -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTING:BOOL=false
+CMAKE_CACHE_ARGS -Darith:STRING=${arith}
 DEPENDS SCALAPACK)
 
 ExternalProject_Add(H5FORTRAN
 GIT_REPOSITORY ${h5fortran_git}
 GIT_TAG ${h5fortran_tag}
-CONFIGURE_HANDLED_BY_BUILD ON
 INACTIVITY_TIMEOUT 30
-CMAKE_ARGS -DCMAKE_INSTALL_PREFIX:PATH=${H5FORTRAN_ROOT} -DBUILD_SHARED_LIBS:BOOL=false -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTING:BOOL=false
+CONFIGURE_HANDLED_BY_BUILD ON
+CMAKE_ARGS -DCMAKE_INSTALL_PREFIX:PATH=${H5FORTRAN_ROOT} -DBUILD_SHARED_LIBS:BOOL=false -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTING:BOOL=false -Dhdf5_external=on
 )
 
 ExternalProject_Add(GLOW
 GIT_REPOSITORY ${glow_git}
 GIT_TAG ${glow_tag}
-CONFIGURE_HANDLED_BY_BUILD ON
 INACTIVITY_TIMEOUT 30
+CONFIGURE_HANDLED_BY_BUILD ON
 CMAKE_ARGS -DCMAKE_INSTALL_PREFIX:PATH=${GLOW_ROOT} -DBUILD_SHARED_LIBS:BOOL=false -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTING:BOOL=false
 )
