--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -63,7 +63,8 @@ add_test(NAME unit:gemini_exe_ok COMMAND $<TARGET_FILE:gemini.bin>)
 set_tests_properties(unit:gemini_exe_ok PROPERTIES
   PASS_REGULAR_EXPRESSION "EOF: gemini.bin"
   FIXTURES_SETUP gemini_exe_fix
-  FIXTURES_REQUIRED "mumps_fixture;hwloc_fix")
+  FIXTURES_REQUIRED "mumps_fixture;hwloc_fix"
+  LABELS unit)
 
 install(TARGETS gemini.bin
   EXPORT ${PROJECT_NAME}Targets
