--- a/src/numerical/potential/CMakeLists.txt
+++ b/src/numerical/potential/CMakeLists.txt
@@ -27,6 +27,7 @@ set(_potential_testfile ${CMAKE_CURRENT_BINARY_DIR}/test_potential2d.h5)
 add_executable(test_potential2d test_potential2D.f90)
 target_link_libraries(test_potential2d PRIVATE PDEelliptic const h5fortran::h5fortran
   MUMPS::MUMPS LAPACK::LAPACK MPI::MPI_Fortran)
+set_target_properties(test_potential2d PROPERTIES LABELS unit)
 # MPI_C is needed here, else will not compile on MinGW with Ninja or Make.
 # LINK_INTERFACE_MULTIPLICITY and IMPORTED_LINK_INTERFACE_MULTIPLICITY do not help here.
 # adding INTERFACE to Mumps project didn't help either
@@ -36,8 +37,7 @@ if(mpi)
   target_link_libraries(test_potential2d PRIVATE SCALAPACK::SCALAPACK)
 
   add_test(NAME unit:potential2
-    COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${Ncpu} $<TARGET_FILE:test_potential2d> ${_potential_testfile}
-    WORKING_DIRECTORY ${PROJECT_BINARY_DIR})
+    COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${Ncpu} $<TARGET_FILE:test_potential2d> ${_potential_testfile})
 else()
 
   # the reason for this is the MPI-1 Fortran 77 linking in MUMPS
@@ -45,13 +45,13 @@ else()
   target_link_libraries(test_potential2d PRIVATE MUMPS::mpiseq)
 
   add_test(NAME unit:potential2
-    COMMAND $<TARGET_FILE:test_potential2d> ${_potential_testfile}
-    WORKING_DIRECTORY ${PROJECT_BINARY_DIR})
+    COMMAND $<TARGET_FILE:test_potential2d> ${_potential_testfile})
 
 endif()
 set_tests_properties(unit:potential2 PROPERTIES TIMEOUT 30
   FIXTURES_SETUP GemPot
   RESOURCE_LOCK cpu_mpi
+  LABELS unit
   DEPENDS unit:HWLOC)
 
 
@@ -62,6 +62,7 @@ if(Python3_FOUND)
   set_tests_properties(unit:potential2:python PROPERTIES
     REQUIRED_FILES ${_potential_testfile}
     TIMEOUT 10
+    LABELS "unit;python"
     FIXTURES_REQUIRED GemPot)
 
 endif(Python3_FOUND)
