--- a/src/mpimod/CMakeLists.txt
+++ b/src/mpimod/CMakeLists.txt
@@ -28,8 +28,11 @@ if(${PROJECT_NAME}_BUILD_TESTING)
 
 add_executable(test_excess_mpi test_excess_mpi.f90)
 target_link_libraries(test_excess_mpi PRIVATE autogrid)
+set_target_properties(test_excess_mpi PROPERTIES LABELS unit)
 
 add_test(NAME unit:mpi:excessCPU COMMAND $<TARGET_FILE:test_excess_mpi>)
-set_tests_properties(unit:mpi:excessCPU PROPERTIES TIMEOUT 10)
+set_tests_properties(unit:mpi:excessCPU PROPERTIES
+  TIMEOUT 10
+  LABELS unit)
 
 endif()
