--- a/src/unit_tests/CMakeLists.txt
+++ b/src/unit_tests/CMakeLists.txt
@@ -9,12 +9,15 @@ endif()
 
 add_executable(test_mpi test_mpi.f90)
 target_link_libraries(test_mpi PRIVATE MPI::MPI_Fortran)
+set_target_properties(test_mpi PROPERTIES LABELS unit)
+
 add_test(NAME unit:mpi_basic
 COMMAND COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${Ncpu} $<TARGET_FILE:test_mpi> ${Ncpu})
 
 set_tests_properties(unit:mpi_basic PROPERTIES
 TIMEOUT 15
 PROCESSORS ${Ncpu}
+LABELS unit
 DEPENDS unit:HWLOC
 FIXTURES_SETUP mpi_fixture
 RESOURCE_LOCK cpu_mpi)
@@ -29,10 +32,12 @@ endif()
 configure_file(test_scalapack.in.f90 test_scalapack.f90 @ONLY)
 add_executable(gemini_scalapack ${CMAKE_CURRENT_BINARY_DIR}/test_scalapack.f90)
 target_link_libraries(gemini_scalapack PRIVATE SCALAPACK::SCALAPACK LAPACK::LAPACK MPI::MPI_Fortran)
+set_target_properties(gemini_scalapack PROPERTIES LABELS unit)
 
 add_test(NAME unit:scalapack COMMAND $<TARGET_FILE:gemini_scalapack>)
 set_tests_properties(unit:scalapack PROPERTIES
 TIMEOUT 15
+LABELS unit
 FIXTURES_REQUIRED mpi_fixture
 FIXTURES_SETUP scalapack_fixture)
 
@@ -40,6 +45,7 @@ FIXTURES_SETUP scalapack_fixture)
 add_executable(test_mumps test_mumps.f90)
 target_link_libraries(test_mumps PRIVATE mumps_interface
   MUMPS::MUMPS SCALAPACK::SCALAPACK LAPACK::LAPACK MPI::MPI_Fortran)
+set_target_properties(test_mumps PROPERTIES LABELS unit)
 
 add_test(NAME unit:mumps_basic
 COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} 2 $<TARGET_FILE:test_mumps>
@@ -48,6 +54,7 @@ WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
 set_tests_properties(unit:mumps_basic PROPERTIES
 TIMEOUT 15
 PROCESSORS 2
+LABELS unit
 RESOURCE_LOCK cpu_mpi
 REQUIRED_FILES ${CMAKE_CURRENT_SOURCE_DIR}/input_simpletest_real.nml
 FIXTURES_REQUIRED scalapack_fixture
