improve mumps link robustness

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -54,10 +54,13 @@ set_target_properties(gemini.bin PROPERTIES
 target_link_libraries(gemini.bin PRIVATE advec calculus helpmod config const collision diffusion fang grid io interp ionization gbsv mesh mpimod
   msis_ifc multifluid
   neutral pathlib PDEparabolic precipBCs reader sanity_check errors sources temporal timeutils)
-target_link_libraries(gemini.bin PRIVATE MUMPS::MUMPS LAPACK::LAPACK MPI::MPI_Fortran MPI::MPI_C)
-# Note: CMake 3.13 needs MPI linked here explicity to gemini.bin on any OS
 if(mpi)
-  target_link_libraries(gemini.bin PRIVATE SCALAPACK::SCALAPACK)
+  # Note: CMake 3.13 needs MPI linked here explicity to gemini.bin on any OS
+  # put libs all in order or you'll get linking error on certain platforms like linux
+  # due to scalapack linked after lapack and blas
+  target_link_libraries(gemini.bin PRIVATE MUMPS::MUMPS SCALAPACK::SCALAPACK LAPACK::LAPACK MPI::MPI_Fortran MPI::MPI_C)
+else()
+  target_link_libraries(gemini.bin PRIVATE MUMPS::MUMPS LAPACK::LAPACK MPI::MPI_Fortran MPI::MPI_C)
 endif()
 
 add_test(NAME unit:gemini_exe_ok COMMAND $<TARGET_FILE:gemini.bin>)
