cmake: dynamic max version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,4 @@
-set(CMAKE_MAX_VERSION 3.21)
-
-cmake_minimum_required(VERSION 3.13...${CMAKE_MAX_VERSION})
+cmake_minimum_required(VERSION 3.13...${CMAKE_VERSION})
 
 if(NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE Release CACHE STRING "Debug or Release")
