--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -78,7 +78,11 @@ set_target_properties(assert PROPERTIES Fortran_MODULE_DIRECTORY ${CMAKE_CURRENT
 
 
 add_executable(gemini3d.compare)
-target_sources(gemini3d.compare PRIVATE gemini_compare.f90 ${CMAKE_CURRENT_SOURCE_DIR}/../io/compare.f90)
+target_sources(gemini3d.compare PRIVATE
+  gemini_compare.f90
+  ${CMAKE_CURRENT_SOURCE_DIR}/../io/compare.f90
+  ${CMAKE_CURRENT_SOURCE_DIR}/../io/compare_out_h5.f90
+  ${CMAKE_CURRENT_SOURCE_DIR}/../io/compare_in_h5.f90)
 target_link_libraries(gemini3d.compare PRIVATE assert config reader pathlib timeutils const nc4fortran::nc4fortran h5fortran::h5fortran)
 target_include_directories(gemini3d.compare PRIVATE ${CMAKE_CURRENT_BINARY_DIR}/include)
 set_target_properties(gemini3d.compare PROPERTIES
