--- a/.github/workflows/ci_linux.yml
+++ b/.github/workflows/ci_linux.yml
@@ -2,6 +2,7 @@ name: ci_linux
 
 env:
   DEBIAN_FRONTEND: noninteractive
+  CTEST_PARALLEL_LEVEL: 2
 
 on:
   push:
@@ -54,11 +55,7 @@ jobs:
         sudo apt update -yq
         sudo cmake -P scripts/install_prereq.cmake
 
-    - run: cmake --preset=make -DCMAKE_BUILD_TYPE=Debug
-    - run: cmake --build build --parallel
+    - run: cmake --preset default -DCMAKE_BUILD_TYPE=Debug
+    - run: cmake --preset default
 
-    - run: ctest -R unit --parallel 4 --output-on-failure
-      working-directory: build
-
-    - run: ctest -R 2dew_fang --parallel 4 --output-on-failure
-      working-directory: build
+    - run: ctest --preset default -R "(unit|2dew_fang)"
