--- a/src/numerical/coord/CMakeLists.txt
+++ b/src/numerical/coord/CMakeLists.txt
@@ -8,10 +8,10 @@ add_library(meshobj_dipole OBJECT meshobj_dipole.f90 dipole_fns.f90)
 target_link_libraries(meshobj_dipole PRIVATE const meshobj newton)
 
 add_executable(newton_testdriver newton_testdriver.f90)
-target_link_libraries(newton_testdriver PRIVATE newton meshobj meshobj_dipole)
+target_link_libraries(newton_testdriver PRIVATE const newton meshobj meshobj_dipole)
 
 add_executable(grid_testdriver grid_testdriver.f90)
-target_link_libraries(grid_testdriver PRIVATE newton meshobj meshobj_dipole)
+target_link_libraries(grid_testdriver PRIVATE const newton meshobj meshobj_dipole)
 
 add_executable(fullgrid_testdriver fullgrid_testdriver.f90)
-target_link_libraries(fullgrid_testdriver PRIVATE newton meshobj meshobj_dipole)
+target_link_libraries(fullgrid_testdriver PRIVATE const newton meshobj meshobj_dipole)
