geomag2geog conversions compiling

--- a/src/numerical/coord/CMakeLists.txt
+++ b/src/numerical/coord/CMakeLists.txt
@@ -10,6 +10,9 @@ target_link_libraries(meshobj_dipole PRIVATE const meshobj newton)
 add_executable(newton_testdriver newton_testdriver.f90)
 target_link_libraries(newton_testdriver PRIVATE const newton meshobj meshobj_dipole)
 
+add_executable(geomag2geog_testdriver geomag2geog_testdriver.f90)
+target_link_libraries(geomag2geog_testdriver PRIVATE const newton meshobj meshobj_dipole)
+
 add_executable(grid_testdriver grid_testdriver.f90)
 target_link_libraries(grid_testdriver PRIVATE const newton meshobj meshobj_dipole)
 
